--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,54 @@ body {
   color: var(--primary-text-color);
 }
 
+html {
+  box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+ul {
+  padding-left: 0px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1170px;
+}
+
+.container-margin {
+  margin-top: 94px;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* убираем точки списков */
 .list {
   list-style: none;
+  display: flex;
 }
 
 /* убираем подчеркивание ссылок */
@@ -33,6 +78,10 @@ body {
   font-size: 26px;
   line-height: 1.19;
   color: var(--accent-color);
+}
+
+.logo-header {
+  margin-right: 93px;
 }
 
 .section-title {
@@ -61,6 +110,11 @@ body {
   color: var(--black-logo-color);
 }
 
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
 .header-nav-link {
   font-weight: 500;
   font-size: 14px;
@@ -69,12 +123,24 @@ body {
   color: var(--primary-text-color);
 }
 
+.header-nav-list {
+  display: flex;
+}
+
+.header-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .header-contact-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+}
+
+.header-contact-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .header-nav-link:hover,
@@ -88,6 +154,12 @@ body {
 
 .hero {
   background-color: var(--hero-background-color);
+  min-height: 600px;
+}
+
+.hero-inner {
+  display: flex;
+  flex-direction: column;
 }
 
 .hero-title {
@@ -98,6 +170,11 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text-color);
+  margin-top: 200px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0px;
 }
 
 .hero-btn {
@@ -111,6 +188,10 @@ body {
   background-color: var(--accent-color);
   color: var(--white-text-color);
   cursor: pointer;
+  max-width: 200px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-btn:hover,
@@ -134,6 +215,11 @@ body {
   color: var(--secondary-text-color);
 }
 
+.features-item:not(:last-child) {
+  margin-right: 30px;
+  margin-left: 0px;
+}
+
 /* ------------СПИСОК ЗАНЯТИЙ-------------- */
 
 /* ----------------КОМАНДА----------------- */
@@ -147,6 +233,7 @@ body {
   font-size: 16px;
   line-height: 1.19px;
   text-align: center;
+  margin-top: 30px;
 }
 
 .team-profession {
@@ -154,6 +241,15 @@ body {
   line-height: 1.19;
   text-align: center;
   color: var(--secondary-text-color);
+  margin-top: 10px;
+}
+
+.team-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.work-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* ----------------ПОДВАЛ----------------- */
@@ -161,12 +257,27 @@ body {
   background-color: var(--hero-background-color);
 }
 
+.logo-footer {
+  display: inline-block;
+  margin-top: 60px;
+}
+
 .logo-white {
   color: var(--white-text-color);
 }
 
+.footer-contact-item:not(:first-child) {
+  margin-top: 9px;
+}
+
 .footer-contact-link.address {
   color: var(--white-text-color);
+}
+
+.footer-contact-list {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 60px;
 }
 
 /* ---------------------------------------------- */
@@ -196,8 +307,36 @@ body {
   letter-spacing: 0.06em;
 }
 
+.container-portfolio {
+  margin-top: 34px;
+}
+
+.portfolio-btn-list {
+  display: flex;
+  justify-content: center;
+}
+
+.portfolio-btn-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-list {
+  flex-wrap: wrap;
+}
+
+.portfolio-item-description {
+  margin-top: 20px;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 20px;
+}
+
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.87;
   color: var(--secondary-text-color);
+}
+
+.portfolio-item:not(:nth-child(3n + 3)) {
+  margin-right: 30px;
 }
