--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ img {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
+  width: 1200px;
 }
 
 .container-margin {
@@ -325,10 +325,10 @@ img {
 }
 
 .portfolio-item-description {
-  margin-top: 20px;
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
 }
 
 .portfolio-list-text {
